--- a/views/default/index.html
+++ b/views/default/index.html
@@ -14,7 +14,7 @@
     <h2>{{=message}}</h2>
     <p class="lead">{{=T('AGORA VAI AGORA FOI')}}</p>
     <ol style="word-wrap:break-word;">
-      <li>{{=T('You are successfully running web2py')}}</li>
+      <li>{{=T('TÁ FUNCIONANDOOOOOOO')}}</li>
       <li>{{=XML(T('You visited the url %s', A(request.env.path_info,_href=request.env.path_info)))}}</li>
       <li>{{=XML(T('Which called the function %s located in the file %s',
         (A(request.function+'()',_href='#'),
