--- a/views/default/index.html
+++ b/views/default/index.html
@@ -12,7 +12,7 @@
   <div class="col-md-12">
     {{if 'message' in globals():}}
     <h2>{{=message}}</h2>
-    <p class="lead">{{=T('AGORA VAI AGORA FOI')}}</p>
+    <p class="lead">{{=T('MARIANA TE AMO')}}</p>
     <ol style="word-wrap:break-word;">
       <li>{{=T('You are successfully running web2py')}}</li>
       <li>{{=XML(T('You visited the url %s', A(request.env.path_info,_href=request.env.path_info)))}}</li>
