--- a/app/templates/item.html
+++ b/app/templates/item.html
@@ -9,5 +9,7 @@
 </head>
 <body>
     <h1>Olá</h1>
+    <input type="text" name="username" id="username">
+    <input type="submit" class="button" value="Submit">
 </body>
 </html>
