--- a/app/templates/homepage.html
+++ b/app/templates/homepage.html
@@ -1,15 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Banco</title>
-    <link rel="stylesheet" href="/static/css/style.css">
-</head>
-<body>
-    <h1>Olá</h1>
-    <input type="text" name="username" id="username">
-    <input type="submit" class="button" value="Submit">
-</body>
-</html>
+{% extends "shared/base.html" %}
+
+
+{% block title %} 
+  <title>Banco</title>
+{% endblock %} 
+
+{% block content %} 
+  <div class="container">
+    <h1 class="display-4">Find Jobs...</h1>
+  </div>
+{% endblock %} 
