--- a/app/banco/templates/banco/home.html
+++ b/app/banco/templates/banco/home.html
@@ -10,7 +10,7 @@
     <title>Banco</title>
 </head>
 <body> 
-    <h1>abgns kjnbwmsrbiunweirb</h1>
+    <h1>abgns a</h1>
     <form action="/action_page.php">
         <label for="fname">First name:</label>
         <input type="text" id="fname" name="fname"><br><br>
