--- a/app/banco/templates/banco/home.html
+++ b/app/banco/templates/banco/home.html
@@ -10,14 +10,9 @@
     <title>Banco</title>
 </head>
 <body> 
-    <h1>abgns a</h1>
-    <form action="/action_page.php">
-        <label for="fname">First name:</label>
-        <input type="text" id="fname" name="fname"><br><br>
-        <label for="lname">Last name:</label>
-        <input type="text" id="lname" name="lname"><br><br>
-        <input type="submit" value="Submit">
-      </form>
+    <h1>Qual deseja adicionar?</h1>
+    <input type="submit" value="Banco">
+    <input type="submit" value="Agencia">
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
     <script src="{% static '/js/script.js' %}"></script>
