Html com menu bar

--- a/app/banco/templates/banco/agencia_create.html
+++ b/app/banco/templates/banco/agencia_create.html
@@ -10,6 +10,17 @@
     <title>Adicione uma agencia</title>
 </head>
 <body>
+    <nav id="menu-h">
+        <ul>
+            <li><a href="">Início</a></li>
+
+            <li><a href="adicionar">Adicionar</a></li>
+            
+            <li><a href="#">Listar</a></li>
+            
+            <li><a href="#">Contato</a></li>
+        </ul>
+    </nav>
     <h1>Adicione uma agencia</h1>
     <form action="." method="post">
         {% csrf_token %}
