--- a/app/banco/templates/banco/agencia_add.html
+++ b/app/banco/templates/banco/agencia_add.html
@@ -24,7 +24,9 @@
     <h1>Adicione uma agencia</h1>
     <form action="." method="post">
         {% csrf_token %}
-        {{ form.as_p }}
+        <table> 
+            {{ form.as_table }}
+        </table>
         <input type="submit" value= "Salvar">
     </form>
 
