--- a/app/banco/templates/banco/banco_add.html
+++ b/app/banco/templates/banco/banco_add.html
@@ -24,7 +24,9 @@
     <h1>Adicione um banco</h1>
     <form action="." method="post">
         {% csrf_token %}
-        {{ form.as_p }}
+        <table> 
+            {{ form.as_table }}
+        </table>
         <input type="submit" value= "Salvar">
     </form>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
