--- a/app/banco/templates/banco/banco_add.html
+++ b/app/banco/templates/banco/banco_add.html
@@ -7,28 +7,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static '/css/banco_add.css' %}">
-    <title>Adicionar Banco</title>
+    <title>Banco Nargs</title>
+    {% include 'partials/header.html' %}
 </head>
 <body>
-    <nav id="menu-h">
-        <ul>
-            <li><a href="">Início</a></li>
-
-            <li><a href="adicionar">Adicionar</a></li>
-            
-            <li><a href="#">Listar</a></li>
-            
-        </ul>
-    </nav>
     <h1>Adicione um banco</h1>
     <form action="." method="post">
         {% csrf_token %}
-        <table> 
-            {{ form.as_table }}
-        </table>
-        <input type="submit" value= "Salvar">
+        
+            {{ form.as_p }}
+       
+        <input type="submit" class="btn btn-primary btn-sm" value="Salvar"></input>
     </form>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
-    <script src="{% static '/js/script.js' %}"></script>
+    
 </body>
 </html>
