--- a/app/banco/templates/banco/home.html
+++ b/app/banco/templates/banco/home.html
@@ -7,25 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static '/css/home.css' %}">
-    <title>Home</title>
+    <title>Banco Nargs</title>
+    {% include 'partials/header.html' %}
 </head>
 <body> 
-    <nav id="menu-h">
-        <ul>
-            <li><a href="">Início</a></li>
-
-            <li><a href="adicionar">Adicionar</a></li>
-            
-            <li><a href="#">Listar</a></li>
-            
-            <li><a href="#">Contato</a></li>
-        </ul>
-    </nav>
 
     <h1> Bem-vindo ao Banco do Narg</h1>
     
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
-    <script src="{% static '/js/script.js' %}"></script>
+    
 </body>
 </html>
