--- a/app/banco/templates/banco/agencia_add.html
+++ b/app/banco/templates/banco/agencia_add.html
@@ -11,17 +11,15 @@
     {% include 'partials/header.html' %}
 </head>
 <body>
+    <div id="main">
+        <form action="." method="post">
+            {% csrf_token %}
+            {{ form.as_p }}
+            
+            <input type="submit" class="btn btn-primary btn-sm" value="Salvar"></input> 
+        </form>
+    </div>
     <h1>Adicione uma agencia</h1>
-    <form action="." method="post">
-        {% csrf_token %}
-        
-        {{ form.as_p }}
 
-        <input type="submit" class="btn btn-primary btn-sm" value="Salvar"></input>
-        
-    </form>
-
-    
-</body>
 </body>
 </html>
