--- a/app/banco/templates/banco/home.html
+++ b/app/banco/templates/banco/home.html
@@ -11,10 +11,9 @@
     {% include 'partials/header.html' %}
 </head>
 <body> 
-
-    <h1> Bem-vindo ao Banco do Narg</h1>
-    
-
-    
+    <div id="main">
+        <h1> Bem-vindo ao Banco do Narg</h1>
+    </div>
+     
 </body>
 </html>
