--- a/app/bank/templates/partials/header.html
+++ b/app/bank/templates/partials/header.html
@@ -6,9 +6,9 @@
 <header>
 
     <nav id="menu-h" class="nav">
-        <a class="nav-link" href={% url 'home' %}>Inicio</a>
-        <a class="nav-link" href={% url 'adicionar' %}>Adicionar</a>
-        <a class="nav-link" href="#">Listar</a>
+        <a class="nav-link" href={% url 'home' %}>Home</a>
+        <a class="nav-link" href={% url 'add' %}>Add</a>
+        <a class="nav-link" href="#">List</a>
       </nav>
 </header>
 
