--- a/app/static/css/header.css
+++ b/app/static/css/header.css
@@ -1,26 +1,29 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 
-
-* {
-    margin: 0 auto;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Open Sans', sans-serif;
-}
- 
-
 #menu-h{
-    background-color: rgb(37, 37, 39);
+    background-color: aqua;
 }
 
-#menu-h a{
+#menu-h ul {
+    max-width: 450px;
+    list-style: none;
+    padding: 0;
+}
+
+#menu-h ul li {
+    display: inline;
+}
+
+#menu-h ul li a {
     color: #FFF;
-    
+    padding: 20px;
+    display: inline-block;
+    text-decoration: none;
+    transition: background .4s;
 }
 
-#menu-h a:hover{
+
+#menu-h a:hover {
     background-color: #8c52ff;
 }
-
-
 
