--- a/app/banco/templates/banco/banco_adicionar.html
+++ b/app/banco/templates/banco/banco_adicionar.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load crispy_forms_tags  %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -15,7 +16,7 @@
         <h1>Adicione um banco</h1>
         <form action="." method="post">
             {% csrf_token %}
-            {{ form.as_p }}
+            {{ form|crispy }}
            
             <input type="submit" class="btn btn-primary btn-sm" value="Salvar"></input>
         </form>
