listar banco adicionado

--- a/app/banco/templates/partials/header.html
+++ b/app/banco/templates/partials/header.html
@@ -26,7 +26,7 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">Listar</a>
             <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
-              <li><a class="dropdown-item" href="">Banco</a></li>
+              <li><a class="dropdown-item" href="{% url 'listarBanco' %}">Banco</a></li>
               <li><a class="dropdown-item" href="{% url 'listarAgencia' %}">Agência</a></li>
             </ul>
       </div>
