html ajustado na listagem

--- a/app/banco/templates/banco/banco_list.html
+++ b/app/banco/templates/banco/banco_list.html
@@ -11,8 +11,8 @@
     <ul>
         {% if bancos %}
         
-            {% for banco in bancos %}
-                {{banco}}
+            {% for banco in bancos  {{banco}}%}
+               
             {% endfor %}
     </ul>
         {% else %}
