estrutura para receber as informações do banco em forma de tabela

--- a/app/banco/templates/banco/agencia_list.html
+++ b/app/banco/templates/banco/agencia_list.html
@@ -11,6 +11,13 @@
     <title>Nargs</title>
 </head>
 <body>
+    {% if agencias %}
+        
+    
+    {% else %}
+
+    {% endif %}
+    
     
 </body>
 </html>
