--- a/app/banco/templates/partials/header.html
+++ b/app/banco/templates/partials/header.html
@@ -2,6 +2,7 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 <link rel="stylesheet" href="{% static '/css/header.css' %}">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"> <!-- Referenciar o bootstrap -->
+<link rel="shortcut icon" type='image/x.icon' href="{% static 'img/logo.ico' %}">
 
 <header>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="menu-h">
