--- a/app/banco/templates/banco/agencia_list.html
+++ b/app/banco/templates/banco/agencia_list.html
@@ -11,13 +11,37 @@
     <title>Nargs</title>
 </head>
 <body>
-    {% if agencias %}
-        
-    
-    {% else %}
+    <div id="main">
+        <ul>
+            {% if agencias %}
 
-    {% endif %}
-    
-    
+            <table class="table">
+                <thead>
+                  <tr>
+                    <th scope="col">Id</th>
+                    <th scope="col">Banco</th>
+                    <th scope="col">Endereço</th>
+                    <th scope="col">Telefone</th>
+                    <th scope="col">Tipo</th>
+                    <th scope="col">Telefone1</th>
+                    <th scope="col">Tipo1</th>
+                    <th scope="col">Agência</th>
+                    <th scope="col">NúmeroAgência</th>
+                  </tr>
+                </thead>
+            <tbody>
+                {% for Agencia in agencias %}
+                    <tr>
+                        <th scope="row">{{Agencia.id}}</th>
+                        <td>{{Banco.nome}}</td>
+                        <td>{{Agencia.nome}}</td>
+                    </tr>
+                {% endfor %}
+            {% else %}
+
+            {% endif %}
+        </ul>
+
+    </div>
 </body>
 </html>
