--- a/app/banco/templates/banco/banco_list.html
+++ b/app/banco/templates/banco/banco_list.html
@@ -8,6 +8,7 @@
     <title>Banco do Narg</title>
   </head>
   <body>
+<div id="main">
     <ul>
       {% if bancos %}
       <table class="table">
@@ -32,5 +33,6 @@
     {% else %}
     <p>Não há bancos registrados</p>
     {% endif %}
+</div>
   </body>
 </html>
