--- a/app/banco/templates/banco/agencia_list.html
+++ b/app/banco/templates/banco/agencia_list.html
@@ -15,7 +15,7 @@
         <ul>
             {% if agencias %}
 
-            <table class="table">
+            <table class="table table-hover">
                 <thead>
                   <tr>
                     <th scope="col">Id</th>
