--- a/app/banco/templates/banco/agencia_list.html
+++ b/app/banco/templates/banco/agencia_list.html
@@ -26,7 +26,7 @@
                     <th scope="col">Telefone1</th>
                     <th scope="col">Tipo1</th>
                     <th scope="col">Agência</th>
-                    <th scope="col">NúmeroAgência</th>
+                    <th scope="col">Número Agência</th>
                   </tr>
                 </thead>
             <tbody>
@@ -41,6 +41,7 @@
                         <td>{{Agencia.tipo1}}</td>
                         <td>{{Agencia.agencia}}</td>
                         <td>{{Agencia.nome_agencia}}</td>
+                        <input type="submit" class="btn btn-primary btn-sm" value="Salvar"></input>
                     </tr>
                 {% endfor %}
             </tbody>
