--- a/app/banco/templates/banco/banco_list.html
+++ b/app/banco/templates/banco/banco_list.html
@@ -25,6 +25,12 @@
             <th scope="row">{{Banco.id}}</th>
             <td>{{Banco.numero}}</td>
             <td>{{Banco.nome}}</td>
+            <td>
+              <button type="button" class="btn btn-primary"><i class="far fa-eye"></i></button>
+              <button type="button" class="btn btn-success"><i class="fas fa-edit"></i></button>
+              <button type="button" class="btn btn-danger"><i class="far fa-trash-alt"></i></button>
+          </td>
+            
           </tr>
           {% endfor %}
         </tbody>
