--- a/app/banco/templates/banco/home.html
+++ b/app/banco/templates/banco/home.html
@@ -13,6 +13,7 @@
 <body> 
     <div id="main">
         <h1> Bem-vindo ao Banco do Narg</h1>
+        <img src={% static "img/logo.ico" %}>
     </div>
      
 </body>
