--- a/app/banco/templates/banco/agencia_adicionar.html
+++ b/app/banco/templates/banco/agencia_adicionar.html
@@ -12,15 +12,19 @@
     {% include 'partials/header.html' %}
 </head>
 <body>
-    <div id="main">
+    
+    <section id="main">
         <h1>Adicione uma agencia</h1>
         <form action="." method="post">
             {% csrf_token %}
-            {{ form|crispy }}
             
+            <div class="w-25 p-3" style="background-color: #fff;">
+                {{ form|crispy }} 
+            </div>
+    
             <input type="submit" class="btn btn-primary btn-sm" value="Salvar"></input> 
         </form>
-    </div>
+    </section>
     
 
 </body>
