--- a/app/static/css/header.css
+++ b/app/static/css/header.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 
 #menu-h{
-    background-color: aqua;
+    color:aquamarine
 }
 
 #menu-h ul {
