--- a/app/banco/templates/banco/agencia_adicionar.html
+++ b/app/banco/templates/banco/agencia_adicionar.html
@@ -1,31 +1,43 @@
-{% load static %}
+{% extends 'base.html' %}
 {% load crispy_forms_tags %}
+{% load static %}
 <!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static '/css/agencia_adicionar.css' %}">
-    <title>Banco Narg</title>
-    {% include 'partials/header.html' %}
-</head>
-<body>
-    
-    <section id="main">
-        <h1>Adicione uma agencia</h1>
-        <form action="." method="post">
-            {% csrf_token %}
-            
-            <div class="w-25 p-3" style="background-color: #fff;">
-                {{ form|crispy }} 
-            </div>
-    
-            <input type="submit" class="btn btn-primary btn-sm" value="Salvar"></input> 
-        </form>
-    </section>
+
+   
+    <link rel="stylesheet" href="{% static '/css/agencia_banco_add.css' %}">
     
 
-</body>
-</html>
+{% block content %}
+  <section id="main">
+      <h1>Adicione uma agencia</h1>
+      <form action="." method="post">
+        {% csrf_token %}
+        {{ form.id_banco|as_crispy_field }}
+          <div class="row">
+            <div class="col">
+              {{ form.agencia|as_crispy_field }}
+            </div>
+            <div class="col">
+                  {{ form.nome_agencia|as_crispy_field }}
+            </div>
+          </div>
+        {{ form.endereco|as_crispy_field }}
+        <div class="row">
+          <div class="col">
+            {{ form.fone|as_crispy_field }}
+          </div>
+          <div class="col">
+            {{ form.tipo|as_crispy_field }}
+          </div>
+        </div>
+        <div class="row">
+          <div class="col">
+            {{ form.fone1|as_crispy_field }}
+          </div>
+          <div class="col">
+            {{ form.tipo1|as_crispy_field }}
+          </div>
+        </div>
+      <input type="submit" class="btn btn-primary btn-sm" value="Salvar"></input>
+  </section>
+{% endblock %}
