blocks e extends adicionados

--- a/app/banco/templates/banco/banco_adicionar.html
+++ b/app/banco/templates/banco/banco_adicionar.html
@@ -1,27 +1,21 @@
-{% load static %}
+{% extends 'base.html' %}
 {% load crispy_forms_tags  %}
+{% load static %}
 <!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static '/css/adicionarBanco.css' %}">
-    <title>Banco Nargs</title>
-    {% include 'partials/header.html' %}
-</head>
-<body>
-    <section id="main">
-        <h1>Adicione um banco</h1>
-        <form action="." method="post">
-            {% csrf_token %}
-                <div class="w-25 p-3" style="background-color: #fff;">
-                {{ form|crispy}} 
-                </div>
-            <input type="submit" class="btn btn-primary btn-sm" value="Salvar"></input>
-        </form>
-    </section>
     
-</body>
-</html>
+
+{% block content %}
+    <link rel="stylesheet" href="{% static '/css/agencia_banco_add.css' %}">
+    
+<section id="main">
+    <h1>Adicione um banco</h1>
+    <form action="." method="post">
+        {% csrf_token %}
+            <div class="w-25 p-3" style="background-color: #fff;">
+            {{ form|crispy }} 
+            </div>
+        <input type="submit" class="btn btn-primary btn-sm" value="Salvar"></input>
+    </form>
+</section>
+    
+{% endblock %}
