--- a/app/banco/templates/banco/agencia_adicionar.html
+++ b/app/banco/templates/banco/agencia_adicionar.html
@@ -1,17 +1,15 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
 {% load static %}
-<!DOCTYPE html>
-
    
-    <link rel="stylesheet" href="{% static '/css/agencia_banco_add.css' %}">
-    
-
 {% block content %}
+<link rel="stylesheet" href="{% static '/css/agencia_banco_add.css' %}">
   <section id="main">
       <h1>Adicione uma agencia</h1>
+      
       <form action="." method="post">
         {% csrf_token %}
+        <div class="w-50 p-3" width='w' style="background-color: #fff;">
         {{ form.id_banco|as_crispy_field }}
           <div class="row">
             <div class="col">
@@ -38,6 +36,7 @@
             {{ form.tipo1|as_crispy_field }}
           </div>
         </div>
-      <input type="submit" class="btn btn-primary btn-sm" value="Salvar"></input>
+        <input type="submit" class="btn btn-primary btn-sm" value="Salvar"></input>
+      </form>
   </section>
 {% endblock %}
