--- a/app/banco/templates/banco/banco_list.html
+++ b/app/banco/templates/banco/banco_list.html
@@ -9,6 +9,7 @@
   </head>
   <body>
 <div id="main">
+  <div class="w-75 p-3" style="background-color: #fff;">
     <ul>
       {% if bancos %}
       <table class="table">
@@ -39,6 +40,7 @@
     {% else %}
     <p>Não há bancos registrados</p>
     {% endif %}
+  </div>
 </div>
   </body>
 </html>
