--- a/app/banco/templates/banco/agencia_adicionar.html
+++ b/app/banco/templates/banco/agencia_adicionar.html
@@ -9,7 +9,7 @@
       
       <form action="." method="post">
         {% csrf_token %}
-        <div class="w-50 p-3" width='w' style="background-color: #fff;">
+        <div class="w-50 p-3" width='w'>
         {{ form.id_banco|as_crispy_field }}
           <div class="row">
             <div class="col">
