--- a/app/banco/templates/banco/home.html
+++ b/app/banco/templates/banco/home.html
@@ -1,20 +1,10 @@
+{% extends 'base.html' %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+
+{% block content %}
     <link rel="stylesheet" href="{% static '/css/home.css' %}">
-    <title>Banco Nargs</title>
-    {% include 'partials/header.html' %}
-</head>
-<body> 
     <div id="main">
         <h1> Bem-vindo ao Banco do Narg</h1>
         <img src={% static "img/logo.ico" %}>
     </div>
-     
-</body>
-</html>
+{% endblock  %}    
