--- a/app/banco/templates/banco/banco_list.html
+++ b/app/banco/templates/banco/banco_list.html
@@ -21,7 +21,7 @@
             <td>{{Banco.numero}}</td>
             <td>{{Banco.nome}}</td>
             <td>
-              <button type="button" class="btn btn-success"><i  Ag"></i></button>
+              <button type="button" class="btn btn-success"><i class="fas fa-edit"></i></button>
               <button type="button" class="btn btn-danger"><i class="far fa-trash-alt"></i></button>
           </td>
             
