--- a/app/banco/templates/banco/home.html
+++ b/app/banco/templates/banco/home.html
@@ -2,9 +2,7 @@
 {% load static %}
 
 {% block content %}
-    <link rel="stylesheet" href="{% static '/css/home.css' %}">
-    <div id="main">
-        <h1> Bem-vindo ao Banco do Narg</h1>
-        <img src={% static "img/logo.ico" %}>
+    <div >
+        aaaaaaaaa
     </div>
 {% endblock  %}    
