--- a/app/banco/templates/partials/header.html
+++ b/app/banco/templates/partials/header.html
@@ -1,41 +1,76 @@
 {% load static %}
+{% block content %}
+
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 <link rel="stylesheet" href="{% static '/css/header.css' %}">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"> <!-- Referenciar o bootstrap -->
-<link rel="shortcut icon" type='image/x.icon' href="{% static 'img/logo.ico' %}">
 
 
-<header>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="menu-h">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="{% url 'paginaInicial' %}"><i class="bi bi-house"></i></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDarkDropdown" aria-controls="navbarNavDarkDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        
-      </button>
-
-      <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
-        <ul class="navbar-nav">
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">Adicionar</a>
-            <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
-              <li><a class="dropdown-item" href="{% url 'adicionarBanco' %}">Banco</a></li>
-              <li><a class="dropdown-item" href="{% url 'adicionarAgencia' %}">Agência</a></li>
-            </ul>
-          </li>
-        </ul>
-
-        <ul class="navbar-nav">
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">Listar</a>
-            <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
-              <li><a class="dropdown-item" href="{% url 'listarBanco' %}">Banco</a></li>
-              <li><a class="dropdown-item" href="{% url 'listarAgencia' %}">Agência</a></li>
-            </ul>
+  <div class="site-mobile-menu">
+    <div class="site-mobile-menu-header">
+      <div class="site-mobile-menu-close mt-3">
+        <span class="icon-close2 js-menu-toggle"></span>
       </div>
-      
     </div>
-  </nav>
-</header>
+    <div class="site-mobile-menu-body"></div>
+  </div>
+  
+  <header class="site-navbar" role="banner">
+
+    <div class="container">
+      <div class="row align-items-center">
+        
+        <div class="col-11 col-xl-2">
+          <h1 class="mb-0 site-logo"><a href="index.html" class="text-white mb-0">GabayBank</a></h1>
+        </div>
+        <div class="col-12 col-md-10 d-none d-xl-block">
+          <nav class="site-navigation position-relative text-right" role="navigation">
+
+            <ul class="site-menu js-clone-nav mr-auto d-none d-lg-block">
+              <li class="active"><a href="index.html"><span>Início</span></a></li>
+              <li class="has-children">
+                <a href="#"><span>Agência</span></a>
+                <ul class="dropdown arrow-top">
+                  <li><a href="#">Adicionar</a></li>
+                  <li><a href="#">Listar</a></li>
+                  
+                
+                </ul>
+              </li>
+              <li class="has-children">
+                <a href="#"><span>Banco</span></a>
+                <ul class="dropdown arrow-top">
+                  <li><a href="#">Adicionar</a></li>
+                  <li><a href="#">Listar</a></li>                
+                </ul>
+              </li>
+              <li><a href="about.html"><span>Sobre</span></a></li>
+              <li><a href="contact.html"><span>Contato</span></a></li>
+            </ul>
+          </nav>
+        </div>
+
+
+        <div class="d-inline-block d-xl-none ml-md-0 mr-auto py-3" style="position: relative; top: 3px;"><a href="#" class="site-menu-toggle js-menu-toggle text-white"><span class="icon-menu h3"></span></a></div>
+
+        </div>
+
+      </div>
+    </div>
+    
+  </header>
+  <h1 class="mb-0 site-logo"><a href="index.html" >aaaaaaaaaaaaaaaaa</a></h1>
+
+  <div class="hero" style="background-image: url('{% static "img/backgroundMenu.jpg" %}');"></div>
+
+  <script src="js/jquery-3.3.1.min.js"></script>
+  <script src="js/popper.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/jquery.sticky.js"></script>
+  <script src="js/main.js"></script>
+
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
 <script src="{% static '/js/script.js' %}"></script>
+
+{% endblock %}
