--- a/app/banco/templates/banco/agencia_list.html
+++ b/app/banco/templates/banco/agencia_list.html
@@ -24,7 +24,7 @@
                 {% for Agencia in agencias %}
                     <tr>
                         <th scope="row">{{Agencia.id}}</th>
-                        <td>{{Banco.nome}}</td>
+                        <td>{{Agencia.id_banco}}</td>
                         <td>{{Agencia.endereco}}</td>
                         <td>{{Agencia.fone}}</td>
                         <td>{{Agencia.tipo}}</td>
