--- a/app/banco/templates/banco/banco_adicionar.html
+++ b/app/banco/templates/banco/banco_adicionar.html
@@ -8,7 +8,7 @@
     
 <section id="main">
     <h1>Adicione um banco</h1>
-    <form action="." method="post">
+    <form action="." class="crispy_form" method="POST" enctype="multipart/form-data">
         {% csrf_token %}
             <div class="w-25 p-3" style="background-color: #fff;">
                 {{ form|crispy }} 
