--- a/app/banco/templates/banco/banco_list.html
+++ b/app/banco/templates/banco/banco_list.html
@@ -22,7 +22,7 @@
             <td>{{Banco.nome}}</td>
             <td>
               <button type="button" class="btn btn-success"><i class="bi bi-pencil-square"></i></button>
-              <button type="button" class="btn btn-danger"><i class="far fa-trash-alt"></i></button>
+              <button type="button" class="btn btn-danger"><i class="bi bi-trash"></i></button>
           </td>
             
           </tr>
