--- a/app/banco/templates/banco/agencia_list.html
+++ b/app/banco/templates/banco/agencia_list.html
@@ -38,7 +38,7 @@
                         <td>{{Agencia.nome_agencia}}</td>
                         <td>
                             <td>
-                                <button type="button" href= "{% url '' %}" class="btn btn-success"><i class="bi bi-pencil-square"></i></button>
+                                <button type="button" href= "{% url 'adicionarAgencia' %}" class="btn btn-success"><i class="bi bi-pencil-square"></i></button>
                                 <button type="button" class="btn btn-danger"><i class="bi bi-trash"></i></button>
                             </td>
                         </td>
