--- a/app/banco/templates/banco/agencia_list.html
+++ b/app/banco/templates/banco/agencia_list.html
@@ -5,11 +5,11 @@
 {% block content %}
     <div id="main">
         
-        
+        <ul>
             {% if agencias %}
 
             <table class="table table-hover">
-                
+                <thead>
                   <tr>
                     <th scope="col">Id</th>
                     <th scope="col">Banco</th>
@@ -23,7 +23,8 @@
                     <th scope="col">Ações</th>
                         
                   </tr>
-             
+                </thead>
+                <tbody>
                 {% for Agencia in agencias %}
                     <tr>
                         <th scope="row">{{Agencia.id}}</th>
@@ -37,18 +38,17 @@
                         <td>{{Agencia.nome_agencia}}</td>
                         <td>
                             <a  href= "{% url 'alterarAgencia' Agencia.id %}" id="{{Agencia.id}}" class="btn btn-success"><i class="bi bi-pencil-square"></i></a>
-                        </td>
-                        <td>
                             <a href= "{% url 'deletarAgencia' Agencia.id %}" id="{{Agencia.id}}" class="btn btn-danger"><i class="bi bi-trash"></i></a>
                         </td>
+                    
                     </tr>
                 {% endfor %}
-         
+                </tbody>
             </table>
             {% else %}
                 <p>Não há Agências registradas</p>
             {% endif %}
-        
+        </ul>
 
     </div>
     {% endblock  %}
