--- a/app/static/css/agencia_banco_list.css
+++ b/app/static/css/agencia_banco_list.css
@@ -1,14 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 
-.container {
-    padding: 2rem 0rem;
-  }
-  
-  h4 {
-    margin: 2rem 0rem 1rem;
-  }
-  
-  .table-image {
+.pagination{
+  margin-bottom: 20px;
+}
 
-    vertical-align: middle;
-  }
+.step-links{
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+}
+.step-links .current{
+  margin-left: 5px;
+  margin-right: 5px;
+}
