--- a/app/banco/templates/banco/agencia_list.html
+++ b/app/banco/templates/banco/agencia_list.html
@@ -1,13 +1,13 @@
 {% extends 'base.html' %}
 {% load static %}
-{% load crispy_forms_tags  %}
+
 
 {% block content %}
-    <div id="main">
-        
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+<link rel="stylesheet" href="{% static '/css/agencia_banco_list.css' %}">
+    <div id="main"> 
         <ul>
             {% if agencias %}
-
             <table class="table table-hover">
                 <thead>
                   <tr>
@@ -20,8 +20,7 @@
                     <th scope="col">Tipo1</th>
                     <th scope="col">Agência</th>
                     <th scope="col">Número Agência</th>
-                    <th scope="col">Ações</th>
-                        
+                    <th scope="col">Ações</th>  
                   </tr>
                 </thead>
                 <tbody>
@@ -39,8 +38,7 @@
                         <td>
                             <a  href= "{% url 'alterarAgencia' Agencia.id %}" id="{{Agencia.id}}" class="btn btn-success"><i class="bi bi-pencil-square"></i></a>
                             <a href= "{% url 'deletarAgencia' Agencia.id %}" id="{{Agencia.id}}" class="btn btn-danger"><i class="bi bi-trash"></i></a>
-                        </td>
-                    
+                        </td>    
                     </tr>
                 {% endfor %}
                 </tbody>
@@ -49,6 +47,21 @@
                 <p>Não há Agências registradas</p>
             {% endif %}
         </ul>
+        <div class="pagination">
+            <span class="step-links">
+              {% if agencias.has_previous %}
+                <a href="?page={{agencias.previous_page_number}}"> <i class="bi bi-arrow-left-circle"></i></a>
+              {% endif %}
 
+                <span class="current">
+                  {{agencias.number}} de {{ agencias.paginator.num_pages}}
+                </span>
+      
+              {% if agencias.has_next %}
+                <a href="?page={{agencias.next_page_number}}"> <i class="bi bi-arrow-right-circle"></i></a>
+              {% endif %}
+            </span>
+      
+          </div>
     </div>
     {% endblock  %}
