texto cadastre-se alterado

--- a/app/banco/templates/usuario/login.html
+++ b/app/banco/templates/usuario/login.html
@@ -49,7 +49,7 @@
               </div>
   
               <div>
-                <p class="mb-0">Não possui uma conta? <a href="{% url 'paginaCadastro' %}" class="text-white-50 fw-bold">Entrar</a>
+                <p class="mb-0">Não possui uma conta? <a href="{% url 'paginaCadastro' %}" class="text-white-50 fw-bold">Cadastre-se</a>
                 </p>
               </div>
   
