--- a/app/banco/templates/banco/banco_list.html
+++ b/app/banco/templates/banco/banco_list.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="{% static '/css/banco/agencia_banco_list.css' %}">
 
 <div id="main">
-  <div class="w-75 p-3" style="background-color: #fff;">
+  <div class="w-75 p-3">
     <ul>
       {% if bancos %}
       <table class="table">
