if user is authentucated adicionado

--- a/app/banco/templates/banco/agencia_list.html
+++ b/app/banco/templates/banco/agencia_list.html
@@ -20,7 +20,9 @@
                     <th scope="col">Tipo1</th>
                     <th scope="col">Agência</th>
                     <th scope="col">Número Agência</th>
+                    {% if user.is_authenticated %}
                     <th scope="col">Ações</th>  
+                    {% endif %}
                   </tr>
                 </thead>
                 <tbody>
@@ -35,10 +37,12 @@
                         <td>{{Agencia.tipo1}}</td>
                         <td>{{Agencia.agencia}}</td>
                         <td>{{Agencia.nome_agencia}}</td>
+                        {% if user.is_authenticated %}
                         <td>
                             <a  href= "{% url 'alterarAgencia' Agencia.id %}" id="{{Agencia.id}}" class="btn btn-success"><i class="bi bi-pencil-square"></i></a>
                             <a href= "{% url 'deletarAgencia' Agencia.id %}" id="{{Agencia.id}}" class="btn btn-danger"><i class="bi bi-trash"></i></a>
-                        </td>    
+                        </td>  
+                        {% endif %}  
                     </tr>
                 {% endfor %}
                 </tbody>
