--- a/app/static/css/banco/agencia_banco_list.css
+++ b/app/static/css/banco/agencia_banco_list.css
@@ -13,3 +13,16 @@
   margin-left: 5px;
   margin-right: 5px;
 }
+
+.fas.fa-search{
+
+  cursor:pointer;
+  color: yellow;
+}
+
+.search-div{
+  padding: 0px;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  display: inline-block;
+}
